[project]
name = "cardioseg"
version = "0.1.0"
description = "Cardiac segmentation + function (ejection fraction) across MRI/CT/echo, honestly evaluated."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "scikit-image",
    "Pillow",                        # PIL.Image (data/dynamic/{anatomy,inverse})
    "scikit-learn",                  # roc_auc/avg_precision (evaluation/uncertainty)
    "nibabel",
    "matplotlib",
    "tqdm",
    "polars",      # the data store + splits (cardioseg/data/{store,splits}.py) — REQUIRED for training
    "pydantic>=2",  # validated hyperparameter configs (cardioseg/hparams.py)
    "omegaconf",   # paths.yaml config loader (cardioseg/config.py)
    "monai>=1.5",
    # torch >=2.7 required for NVIDIA Blackwell (sm_120, RTX 5090). The CUDA build comes from the
    # PyTorch index (see [tool.uv.sources] below), NOT plain PyPI (which is CPU). Verified: 2.10+cu130.
    "torch>=2.7",
    # Promoted from extras (2026-07-07): imported at module top, NOT lazy. Everything here runs in the
    # normal train/eval/export flow; there's no light non-torch consumer to protect, so lazy imports
    # were just laziness. Only the GPU lane (cupy/cucim) stays optional — it's platform-conditional.
    "SimpleITK",                     # N4 + DICOM I/O (preprocessing/n4, data/static/mri/dicom)
    "onnx", "onnxruntime",           # ONNX export + argmax parity (core/export_onnx; cardioview handoff)
    "pyvista",                       # 3D mesh/volume render (core/mesh, data/dynamic/{anatomy,mrxcat})
    "mlflow", "psutil", "pynvml",    # experiment tracking + model registry (the store); psutil/pynvml = system metrics
    "captum",                        # attribution saliency diagnostic (data/analysis/attribution)
    "jaxtyping",                     # tensor SHAPE/dtype annotations (Float[Tensor,"B C H W"]); inert without a runtime checker, so no prod cost — beartype (dev) enforces them in tests
    "beartype",                      # runtime checker jaxtyping delegates to; @shapecheck (core.types) enforces shapes
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]
# The guardrail ANALYZERS are an installed package pinned by scaffold tag (not vendored source) — an engine
# update is a one-line `devtools_ref` bump on `copier update`, no source diff in your PRs. Imports as
# `devtools` (`python -m devtools.graph …`); grimp/networkx arrive transitively. ast-grep/jscpd configs are
# located from the install via `python -m devtools.config`. Pin lives in .copier-answers.yml (devtools_ref).
devtools = ["sdlc-devtools @ git+https://github.com/dimiturtrz/sdlc-scaffold.git@v1.14.0#subdirectory=sdlc-devtools"]
nnunet = ["nnunetv2>=2.5"]   # external SOTA baseline (baselines/nnunet), own env — never a core dep
mrxcat = ["opencv-python-headless"]   # OFFLINE tooling: the vendored MRXCAT2.0 warper (external/mrxcat2); NOT a runtime dep — we consume its output masks and paint with our own engine
# GPU lane — the ONE genuinely-optional runtime dep: LINUX-only (cupy/cucim ship no Windows wheels).
# The code branches on availability (single capability gate), scipy/CPU fallback on Windows. Install
# on linux with `uv sync --extra gpu`.
gpu = ["cupy-cuda13x; sys_platform == 'linux'", "cucim-cu13; sys_platform == 'linux'"]
all = ["nnunetv2>=2.5", "opencv-python-headless", "pytest", "pytest-cov",
       "sdlc-devtools @ git+https://github.com/dimiturtrz/sdlc-scaffold.git@v1.14.0#subdirectory=sdlc-devtools"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]          # repo root importable -> top-level devtools/ (dev tooling, not a shipped package)
# tests/unit/ MIRRORS the source tree (bd cardiac-seg-h7vy.1) -> same-named test modules in different
# dirs (two test_pipeline_chain.py). importlib import mode resolves those by path (the default 'prepend'
# needs unique basenames + __init__ packages, which a mirror breaks).
addopts = "--import-mode=importlib"

# Architecture fitness thresholds (devtools/graph.py --assert) — the METRIC arch axis import-linter's
# categorical contracts can't express. BLOCKING: god-module (fan-in AND fan-out > bottleneck_degree),
# file > file_max, any import cycle. ADVISORY: betweenness > betweenness_max (noisy).
[tool.structure]
# >>> LOCAL-SLOT: arch-thresholds — tune per repo; the template ships defaults and won't churn these.
bottleneck_degree = 8       # a module with BOTH fan-in and fan-out over this is a god-module (0 today)
file_max = 750              # god-file ceiling (largest today ~548)
file_min = 0                # OFF (owner decision): no honest floor exists — the small files are SSOT /
#                             strategy-entry / shared-vocab leaves (geo.py 13, types.py 28, one-file-per-
#                             split), which the repo's own principles produce; a floor would flag legit
#                             leaves and miss real "too-thin" modules (a responsibility judgment, not lines).
betweenness_max = 0.10      # advisory chokepoint threshold (max today ~0.04)
main_sequence_max = 0.0     # advisory Martin main-sequence distance |A+I-1| ceiling — 0 = OFF (bd x3b)
test_layout = "mirror"      # every logic module needs tests/unit/<pkg>/<path>/test_<name>.py (0/79 unmirrored)
# <<< LOCAL-SLOT: arch-thresholds

# Dependency hygiene (deptry, ENFORCED): imported-but-undeclared (DEP001) / declared-but-unused (DEP002) /
# transitive (DEP003) imports. noxfile.py imports the `nox` runner (invoked via uvx, deliberately not a
# project dep) so it's excluded from the scan.
[tool.deptry]
# cardioview = a separate viewer lane (script-style sibling imports, own dep story); core+cardioseg are the
# packaged guardrail targets deptry validates. noxfile imports the uvx-invoked nox runner (not a project dep).
extend_exclude = ["noxfile.py", "cardioview"]

# deptry does not scan tests/ (its default exclude), so DEP002 (declared-but-unused) fires for anything
# only exercised by the test suite or by tooling. PERMANENT ignores (never imported in scanned source by
# design): the test-runner deps `pytest`/`pytest-cov`, and `sdlc-devtools` (the analyzers, invoked as a CLI
# `python -m devtools.*`). STARTERS: the runtime deps the scaffold ships for you to build on
# (numpy/jaxtyping/beartype/pydantic) — they read as unused until you import them.
[tool.deptry.per_rule_ignores]
# >>> LOCAL-SLOT: deptry-unused — PRUNE a starter once you wire it (keep pytest/pytest-cov/sdlc-devtools)
# DEP002 = declared-but-not-directly-imported, all legit: test/tooling runners; onnx (pulled by onnxruntime.quantization at runtime); psutil/pynvml (lazy-imported in tracking.py); the optional extras (nnunet baselines quarantine / opencv mrxcat offline tooling / cupy+cucim gpu linux-only).
DEP002 = ["pytest", "pytest-cov", "sdlc-devtools", "onnx", "psutil", "pynvml",
          "nnunetv2", "opencv-python-headless", "cupy-cuda13x", "cucim-cu13"]
# <<< LOCAL-SLOT: deptry-unused

# Ruff: format + lint. Curated rule set (decided rule-by-rule, not `select = ["ALL"]`) — the goal is
# catching drift (magic constants, sprawling ifs, dead code, lazy imports), NOT enforcing a house
# style. Escape hatch is per-line `# noqa: <code>`, used sparingly. `ty`/type-checking is a separate,
# later axis (bd rp8l). Per-code rationale lives in CLAUDE.md (## Static analysis) + git history.
[tool.ruff]
line-length = 120
# >>> LOCAL-SLOT: ruff-exclude — edit freely, the template will not overwrite intent here
extend-exclude = ["baselines", "cardioview/web/node_modules", "cardioview/web/dist", "mri-sim", ".staging", "runs"]
# <<< LOCAL-SLOT: ruff-exclude

[tool.ruff.lint]
select = ["F", "B", "I", "T201", "FBT", "BLE001", "S101", "S110", "C901", "PLR0912", "PLR0913", "PLR0915", "PLR2004", "PLC0415", "RUF100", "N", "E741", "E742", "E743", "PLR0124", "PLR1714", "PLW3301", "RUF012", "RUF005", "RUF007", "RUF010", "RUF022", "RUF046", "C408", "C420", "SIM", "PERF401", "PLW0108", "E731", "E402", "ICN001", "S603", "S607", "PTH123", "E501", "SLF001"]
ignore = [
    # jaxtyping shape strings are deliberate runtime-checked annotations that ruff's forward-ref parser
    # misreads (jaxtyping's own FAQ prescribes disabling both): F722 = a multi-token dim string
    # `Float[Tensor, "b c h w"]` (invalid forward-ref syntax); F821 = a single-axis `Float[Tensor, "n"]`
    # (a valid forward-ref to the undefined name `n`). Needed so a 1-D shape passes the now-blocking
    # shape-contracts gate (bd kqk) — the shape gate REQUIRES an annotation the lint would otherwise reject.
    "F722",
    "F821",
]
# OFF by decision (bd l5q8): D* (docstrings not mandated); ANN* (deferred type axis, bd rp8l); RUF001-003
# (the → × λ math unicode is intentional; RUF100 ON); E701/E702 (the `a; b` / `if x: y` compaction kept);
# NPY002 (legacy np.random — modernizing changes the RNG stream, breaking seed-comparability); TRY003 +
# EM101/EM102 (exception-message verbosity); G004 (f-strings in logging kept); COM812 (formatter conflict);
# ARG002/004/005 (unused args = add_args(ap)/run(args)/build() interface signatures); TID252 (relative
# intra-package imports intentional); UP* (pyupgrade churn — annotation modernization is the type axis).

# pep8-naming (N): case convention is a UNIVERSAL rule; the allowlisted idioms are per-repo FACTS. Every
# name that carries a meaning renames — only symbols with no honest descriptive form belong here (a dodge
# makes the gate useless). X*/Y* = ML design matrices + image/mask tensor pairs; B/C/H/W = tensor-shape
# unpacking dims; T1/T2/TR/PD = MRI-physics literature symbols; F = torch.nn.functional; sitk = SimpleITK
# alias; store = Build imported as the store facade; timed = lowercase decorator-class.
[tool.ruff.lint.pep8-naming]
# >>> LOCAL-SLOT: pep8-naming — ignore-names VOCAB (this repo's ML/physics idioms); the block is shared,
# only its contents differ. Add domain symbols (MRI T1/T2/TR/PD, canonical lib aliases…) here.
ignore-names = ["X*", "Y*", "B", "C", "H", "W", "T1", "T2", "TR", "PD", "F", "sitk", "store", "timed"]
# <<< LOCAL-SLOT: pep8-naming

[tool.ruff.lint.per-file-ignores]
# Tests get a wider carve-out: literal fixtures (PLR2004) + bool flags (FBT); mock classes mirror external
# PascalCase APIs + local math/alias scratch (N8xx); fixtures take many params (PLR0913). The SUBSTANTIVE
# gates (imports-at-top, real bugs, dead code) still apply to tests. SLF001 is enforced house-wide again
# (bd 8ex reopened) but tests legitimately poke privates-under-test, so it sits in the tests carve-out.
"__init__.py" = ["F401"]
"tests/**" = ["S101", "PLR2004", "FBT", "SLF001", "N801", "N802", "N803", "N806", "N812", "PLR0913"]
# >>> LOCAL-SLOT: per-file-ignores — repo-specific file carve-outs (e.g. a best-effort telemetry shell
# that must never raise). Add lines here; copier update won't overwrite this region.
"cardioseg/tracking.py" = ["S110", "BLE001"]  # best-effort telemetry: mlflow errors must never break training
"tests/unit/devtools/**" = ["PLC0415"]  # template-shipped engine tests import-under-argv-monkeypatch; PLC0415 is cardiac-superset (not in base select), so upstream never lints it. Fold when scaffold moves the imports top-level.
# <<< LOCAL-SLOT: per-file-ignores

# Vulture: dead-code (functions/classes/attrs) — the axis ruff can't see. Scans core+cardioseg+cardioview
# (NOT tests): a prod symbol referenced solely by a test then surfaces as dead here, instead of being
# masked by its test fan-in (the trap that fools both vulture and coverage). CI runs two tiers —
# conf>=80 blocks (near-certain: redundant conditions, unused locals), conf>=60 warns (dead funcs, but
# eats entry-point/no-fan-in false positives). bd cardiac-seg-5ogp.
[tool.vulture]
# >>> LOCAL-SLOT: vulture-scan — edit freely, the template will not overwrite intent here
paths = ["core", "cardioseg", "cardioview"]
exclude = ["baselines", "*/node_modules/*", "cardioview/web/dist", "mri-sim", ".staging", "runs"]
# <<< LOCAL-SLOT: vulture-scan
min_confidence = 60
# ignore_names = symbols vulture must treat as USED — each IS referenced, but through a path its static
# name-match can't follow (framework dispatch, iteration, string keys, external-lib attribute). NOT a
# "don't care" list — a documented FP each:
#   model_config     pydantic reads `model_config = _VALIDATE` via its metaclass (never our code)
#   azimuth/elevation  written to a pyvista Camera (`pl.camera.azimuth = 35`); the read is inside pyvista
#   BG               Label.BG only materialized by iteration — `tuple(int(c) for c in Label)`
#   PHILIPS          Vendor.PHILIPS only materialized by iteration — `tuple(Vendor)` (no per-vendor filter)
#   _missing_        the StrEnum case-fold hook, invoked by the enum on `Phase(x)` (e.g. mesh.py type=Phase)
#   sex/field_T/scanner/centre  PatientMeta fields written in adapter meta(), read as polars `pl.col(...)`
# >>> LOCAL-SLOT: vulture-ignore-names — this repo's documented dead-code false positives
ignore_names = ["model_config", "azimuth", "elevation", "BG", "PHILIPS", "_missing_", "sex", "field_T", "scanner", "centre"]
# <<< LOCAL-SLOT: vulture-ignore-names
ignore_decorators = ["@model_validator", "@field_validator", "@field_serializer", "@model_serializer", "@computed_field"]

# Coverage (pytest-cov). Measures core+cardioseg. The denominator is LIBRARY logic, not scripts: omit
# the exploratory analysis CLIs + offline builders + the onnx export (no import fan-in, need raw data
# on disk — counting them just drags the % with code that isn't unit-testable). Data ADAPTERS stay in
# (low coverage there is honest signal to close, not noise to hide). exclude_lines drops the __main__
# entry blocks + protocol stubs from the count. Enforced floor 90 (ratcheted from 80, bd cardiac-seg-xf8r).
# cardioview is measured SEPARATELY (CI cardioview step, own .coverage.cardioview) so the core+cardioseg
# floor stays calibrated to LIBRARY logic. bd cardiac-seg-emko / 3vbc.
[tool.coverage.run]
# >>> LOCAL-SLOT: coverage-scan — edit freely, the template will not overwrite intent here
source = ["core", "cardioseg"]
omit = ["*/data/analysis/*", "*_build.py", "core/export_onnx.py"]
# <<< LOCAL-SLOT: coverage-scan

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "^\\s*\\.\\.\\.$",
]

# import-linter (grimp engine): the dependency rule as a STATIC import-graph contract, not prose. core is
# the shared kernel — it must import NEITHER trainer (cardioseg) NOR viewer (cardioview); the viewer
# depends only on core. CI fails the day a new upward edge lands. bd cardiac-seg-dsz2.
# >>> LOCAL-SLOT: import-contracts — layering scope + directional rules; root_packages widens to the
# scope-only viewer (cardioview) that carries layer rules but isn't in the arch set. Edit freely.
[tool.importlinter]
root_packages = ["core", "cardioseg", "cardioview"]

[[tool.importlinter.contracts]]
name = "core is an independent kernel (imports neither cardioseg nor cardioview)"
type = "forbidden"
source_modules = ["core"]
forbidden_modules = ["cardioseg", "cardioview"]

[[tool.importlinter.contracts]]
name = "cardioview depends only on core (never the trainer)"
type = "forbidden"
source_modules = ["cardioview"]
forbidden_modules = ["cardioseg"]

# The store's read/query surface stays preprocessing-free: `query` (DataCfg, load_arrays, MetaBuilder…)
# must not import the N4/Nyúl pipeline. Normalization is a DOWNSTREAM stage (`build`/`normalize` own it),
# so read-only consumers never transitively drag it. The N4Cfg *config* is fine (co-located in n4.py);
# this forbids the pipeline LOGIC modules only. bd cardiac-seg-4hdt.
[[tool.importlinter.contracts]]
name = "store read surface (query) is preprocessing-free (normalization is a downstream stage)"
type = "forbidden"
source_modules = ["core.data.static.store.query"]
forbidden_modules = ["core.preprocessing.preprocess", "core.preprocessing.nyul"]
# <<< LOCAL-SLOT: import-contracts

# Shape-contract gate (devtools/shape_contracts.py, base ml-gate) — a public array/tensor boundary must
# carry a jaxtyping shape, not a bare `np.ndarray`/`Tensor`. The universal `ndarray`/`Tensor` are builtin;
# this repo's array ALIASES (core.types names that also mean "an array") are the FACT that varies.
[tool.shape_contracts]
# >>> LOCAL-SLOT: shape-aliases — this repo's array-alias type names (core.types)
array_aliases = ["Volume", "Image", "Mask"]
# <<< LOCAL-SLOT: shape-aliases

# torch's CUDA build lives on the PyTorch index, not PyPI. Pin it there explicitly so uv resolves the
# cu130 wheel (both Windows + Linux have the RTX 5090) instead of the CPU build. `explicit` = only
# packages pinned via [tool.uv.sources] draw from this index.
[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "cardioseg*"]
